--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: HearthSim
 description: Hearthstone Simulation & AI
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/hearthsim/hearthsim.github.io/master/images/logo.png
 
 #
 # Flags below are optional
