Better email address

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ avatar: https://raw.githubusercontent.com/hearthsim/hearthsim.github.io/master/i
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  email: jerome@leclan.ch
+  email: contact@hearthsim.info
   facebook:
   flickr:
   github: HearthSim
