--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,9 @@ markdown: redcarpet
 highlighter: pygments
 permalink: /blog/:title/
 
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+
 # The release of Jekyll Now that you're using
 version: v1.1.0
 
