--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ sass:
 
 # Use the following plug-ins
 gems:
+  - jekyll-mentions # @-mentions
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
 
 # Files excluded from production site
