Fix / update various URLs to https

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Hearthstone Simulation & AI
 logo: /images/logo.png
 
 # Used for Sitemap.xml and RSS feed
-url: http://hearthsim.info
+url: https://hearthsim.info
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
