Clean up configuration and templates

--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,22 @@
-name: HearthSim
-description: Hearthstone Simulation & AI
-logo: /images/logo.png
-
-# Used for Sitemap.xml and RSS feed
-url: https://hearthsim.info
-
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
+url: "https://hearthsim.info"
 baseurl: ""
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  email: contact@hearthsim.info
-  github: HearthSim
-  rss: true
-  twitter:
-  youtube: c/HearthstoneScience
-
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
-
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
-
-# Jekyll configuration
-
 permalink: /blog/:title/
 
+vars:
+  name: "HearthSim"
+  description: "Hearthstone Simulation & AI"
+  logo: "/images/logo.png"
+  email: "contact@hearthsim.info"
+  google_analytics:
+  rss: true
+
+  links:
+    github: HearthSim
+    youtube: c/HearthstoneScience
+    twitter:
+
+
+# Syntax highlighting
 markdown: kramdown
 kramdown:
   # Use Github Flavored Markdown (including triple backticks)
@@ -41,15 +28,16 @@ kramdown:
     css_class: "highlight"
 
 sass:
-  style: :compressed # You might prefer to minify using :compressed
+  style: :compressed
 
-# Use the following plug-ins
+
+# Plug-ins
 gems:
   - jekyll-mentions # @-mentions
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
 
-# Files excluded from production site
+
 exclude:
-    - LICENSE
-    - README.md
-    - CNAME
+  - LICENSE
+  - README.md
+  - CNAME
