--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ vars:
     github: HearthSim
     youtube: c/HearthstoneScience
     twitter:
+    gitter: "https://gitter.im/HearthSim/HearthSim"
+    webchat: "https://webchat.freenode.net/?channels=hearthsim,hearthsim-ai,hsreplay"
 
 
 # Syntax highlighting
