--- a/s3_website.yml
+++ b/s3_website.yml
@@ -2,3 +2,5 @@ gzip: true
 s3_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
 s3_secter: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
 s3_bucket: <%= ENV["S3_DEFAULT_BUCKET"] %>
+content_type:
+  "*.dtd": application/xml-dtd
